# otus-cpp-2023

./: .gitignore  CMakeLists.txt  CMakeProj.cpp  CMakeProj.h  Doxyfile  Doxyfile.in  README.md  README_8md.html  allocator.cpp  annotated.html  check.txt  classes.html  eng.cpp  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  hierarchy.html  in.txt  index.html  ip_filter.cpp  main.cpp  matrix.cpp  matrix.h  matrix_test.cpp  md_README.html  menudata.js  pages.html  structis__container.html  structis__container_3_01std_1_1list_3_01Ts_8_8_8_01_4_01_4.html  structis__container_3_01std_1_1vector_3_01Ts_8_8_8_01_4_01_4.html  structis__homogeneous__tuple.html  structis__homogeneous__tuple_3_01T_00_01U_00_01Args_8_8_8_01_4-members.html  structis__homogeneous__tuple_3_01T_00_01U_00_01Args_8_8_8_01_4.html  structis__homogeneous__tuple_3_01T_01_4.html  templates.cpp  templates_8cpp.html  test_timus.cpp  (+3 more)
.github/workflows/: cmake.yml  task1.yml  task2.yml  task3.yml  task4.yml  task5.yml  task6.yml  task7.yml
Bulk/: App.cpp  App.h
Bulk/Command/Private/: SimpleCommand.cpp  SimpleCommand.h
Bulk/Command/Public/: ICommand.h
Bulk/CommandExecutor/Private/: SimpleCommandExecutor.cpp  SimpleCommandExecutor.h
Bulk/CommandExecutor/Public/: ICommandExecutor.h
Bulk/CommandLogger/Private/: CmdCommandLogger.cpp  CmdCommandLogger.h
Bulk/CommandLogger/Public/: ICommandLogger.h
Bulk/CommandReceiver/Private/: CmdCommandReceiver.cpp  CmdCommandReceiver.h
Bulk/CommandReceiver/Public/: ICommandReceiver.h
CMakeProj/: CMakeLists.txt
Editor/: CmdApplication.cpp  CmdApplication.h
Editor/Layers/Domain/Private/: Document.cpp  Document.h  Primitive.cpp  Primitive.h  Storage.cpp  Storage.h
Editor/Layers/Domain/Public/: IStorage.h
Editor/Layers/Interaction/Private/: InputButton.cpp  InputButton.h  InputController.cpp  InputController.h
Editor/Layers/Interaction/Public/: IInputController.h
Editor/Layers/Presentation/Private/: GUI.cpp  GUI.h
Editor/Layers/Presentation/Public/: IGUI.h
search/: all_0.js  all_1.js  classes_0.js  files_1.js  functions_1.js  searchdata.js  variables_0.js  variables_1.js
